--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 networks:
   appnet:
     driver: bridge
@@ -42,17 +40,16 @@ services:
     image: thanh2909/simple-fullstack-docker-v3-ci-tests-api:v0.2
     container_name: api
     environment:
-      # ví dụ: postgresql://postgres:${POSTGRES_PASSWORD}@db:5432/mydb
       - DATABASE_URL=${DATABASE_URL}
       - JWT_SECRET=${JWT_SECRET}
-      - JWT_EXPIRE_MINUTES=${JWT_EXPIRE_MINUTES:-120}
-      - MINIO_ENDPOINT=${MINIO_ENDPOINT:-http://minio:9000}
+      - JWT_EXPIRE_MINUTES=${JWT_EXPIRE_MINUTES}
+      - MINIO_ENDPOINT=${MINIO_ENDPOINT}
       - MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY}
       - MINIO_SECRET_KEY=${MINIO_SECRET_KEY}
-      - MINIO_BUCKET=${MINIO_BUCKET:-uploads}
-      - MINIO_SECURE=${MINIO_SECURE:-false}
+      - MINIO_BUCKET=${MINIO_BUCKET}
+      - MINIO_SECURE=${MINIO_SECURE}
       # Dùng path /minio-public qua Nginx để lộ file public
-      - MINIO_PUBLIC_URL=${MINIO_PUBLIC_URL:-http://$HOSTNAME_OR_IP/minio-public}
+      - MINIO_PUBLIC_URL=${MINIO_PUBLIC_URL}
     depends_on: [db, minio]
     networks: [appnet]
     restart: unless-stopped
@@ -62,9 +59,9 @@ services:
     image: postgres:15-alpine
     container_name: db
     environment:
-      - POSTGRES_USER=${POSTGRES_USER:-postgres}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-postgres}
-      - POSTGRES_DB=${POSTGRES_DB:-mydb}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD
+      - POSTGRES_DB=${POSTGRES_DB}
     volumes:
       - pgdata:/var/lib/postgresql/data
     networks: [appnet]
@@ -76,8 +73,8 @@ services:
     container_name: minio
     command: server /data --console-address ":9001"
     environment:
-      - MINIO_ROOT_USER=${MINIO_ACCESS_KEY:-minioadmin}
-      - MINIO_ROOT_PASSWORD=${MINIO_SECRET_KEY:-minioadmin}
+      - MINIO_ROOT_USER=${MINIO_ACCESS_KEY}
+      - MINIO_ROOT_PASSWORD=${MINIO_SECRET_KEY}
     volumes:
       - minio_data:/data
     networks: [appnet]
