--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,16 @@ cython_debug/
 
 # VS Code settings
 .vscode/
+
+# Terraform files
+*.tfstate
+*.tfstate.*
+.crash
+.terraform/
+terraform.tfvars
+terraform.tfvars.json
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+.terraform.lock.hcl
