--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,7 @@ services:
     depends_on: [db, minio]
 
   frontend:
-    image: thanh2909/simple-fullstack-docker-v3-ci-tests-frontend:v0.0
-    environment:
-      - VITE_API_BASE=http://api:8000
+    build: ./frontend
     ports: ["3000:80"]
     depends_on: [api]
 
