--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -25,10 +25,9 @@ services:
 
   # Frontend SPA (đang dùng image có sẵn của bạn)
   frontend:
-    image: thanh2909/simple-fullstack-docker-v3-ci-tests-frontend:v0.0
+    build: ./frontend
     container_name: frontend
-      # Hoặc thay $HOSTNAME_OR_IP bằng domain/IP thật, ví dụ:
-      # - VITE_API_BASE=http://your-domain.com/api
+   
     networks: [appnet]
     restart: unless-stopped
 
