--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -27,7 +27,8 @@ services:
   frontend:
     build: ./frontend
     container_name: frontend
-   
+    environment:
+      - VITE_API_BASE=${VITE_API_BASE}
     networks: [appnet]
     restart: unless-stopped
     depends_on:
