--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
   frontend:
     build: ./frontend
     container_name: frontend
+    environment:
+      - VITE_API_BASE=http://localhost:8000
     ports: ["3000:80"]
     depends_on: [api]
     networks:
