--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,18 +1,34 @@
-# Build stage
-FROM node:18-alpine AS build
-RUN apk add --no-cache libc6-compat
+# Stage 1: build ứng dụng Vite/React
+FROM node:20-alpine AS build
 WORKDIR /app
 
-# Generate fresh lock from package.json, then clean install
-COPY package.json ./
-RUN npm install --package-lock-only
+# cài deps
+COPY package*.json ./
+RUN npm install
 
+# copy source
 COPY . .
-RUN npm ci && npm run build
 
-# Serve
-FROM nginx:alpine
-COPY --from=build /app/dist /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-EXPOSE 80
+# build ra thư mục dist/
+RUN npm run build
+
+# Stage 2: chạy Nginx để serve static
+FROM nginx:alpine AS runtime
+WORKDIR /usr/share/nginx/html
+
+# copy build output vào nginx document root
+COPY --from=build /app/dist . 
+
+# copy env template và đặt tên env.js (sẽ bị patch lúc container start)
+COPY public/env.template.js ./env.js
+
+# entrypoint script để inject biến môi trường khi container khởi động
+COPY docker-entrypoint.sh /docker-entrypoint.sh
+RUN chmod +x /docker-entrypoint.sh
+
+# (tuỳ bạn) nếu SPA cần luôn trả index.html cho mọi route, bạn có thể thêm nginx.conf custom.
+# Ví dụ: uncomment nếu bạn có file cấu hình tùy chỉnh
+# COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+ENTRYPOINT ["/docker-entrypoint.sh"]
 CMD ["nginx", "-g", "daemon off;"]
