--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -25,11 +25,10 @@ services:
 
   # Frontend SPA (đang dùng image có sẵn của bạn)
   frontend:
-    build : 
-      context: ./frontend
-      args:
-        VITE_API_BASE: ${API_BASE}
+    image: thanh2909/simple-fullstack-docker-v3-ci-tests-frontend:v0.2
     container_name: frontend
+    environment:
+      - API_BASE=${API_BASE}
     networks: [appnet]
     restart: unless-stopped
     depends_on:
