--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,11 +18,12 @@ services:
       - appnet
 
   frontend:
-    build : 
-      context: ./frontend
-      args:
-        VITE_API_BASE: "http://localhost:8000"
+    image: thanh2909/simple-fullstack-docker-v3-ci-tests-frontend:v0.2
+      
     container_name: frontend
+    environment:
+      - API_BASE=http://localhost:8000
+  
 
     ports: ["3000:80"]
     depends_on: [api]
