--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,4 +1,22 @@
-server { listen 80; server_name _; root /usr/share/nginx/html; index index.html;
-  location / { try_files $uri /index.html; }
-  location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico)$ { try_files $uri =404; expires 1h; access_log off; }
+server {
+    listen 80;
+    server_name _;
+
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # TẤT CẢ route của SPA
+    location / {
+        # 1. Nếu có file → trả file
+        # 2. Nếu có folder → trả folder
+        # 3. Nếu không có gì → trả index.html cho router xử lý (/login, /edit/2, ...)
+        try_files $uri $uri/ /index.html;
+    }
+
+    # Static assets
+    location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico|webp|ttf|woff|woff2)$ {
+        try_files $uri =404;
+        expires 1h;
+        access_log off;
+    }
 }
